# lets-go

./: BUILD.bazel  WORKSPACE  docker-compose.yaml  main.go
cmd/web/: BUILD.bazel  app.go  errors.go  handlers.go  main.go  routes.go  views.go
containers/snippetbox-db/: Dockerfile
containers/snippetbox-db/initdb.d/: initdb.sh
pkg/models/: BUILD.bazel  database.go  models.go
ui/: BUILD.bazel
ui/html/: BUILD.bazel  base.html  home.page.html  show.page.html
